--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="index.html">Beranda</a></li>
                 <li><a href="jadwal.html">jadwal Solat</a></li>
                 <li><a href="kegiatan.html">Kegiatan</a></li>
-                <li><a href="">Info</a></li>
+                <li><a href="info.html">Info</a></li>
                 <li><a href="">Kontak</a></li>
             </ul>
         </nav>
