--- a/info.html
+++ b/info.html
@@ -7,6 +7,7 @@
     <title>Masjid Al Azhar 14 Semarang</title>
     <link rel="stylesheet" href="styler.css">
     <link rel="stylesheet" href="hpth.css">
+    <link rel="stylesheet" href="info.css">
 </head>
 <body>
     <header> 
@@ -32,7 +33,7 @@
     </header>
     <main>
         <div class="judul">
-            <h2>Jadwal Sholat masjid al azhar 14 kota semarang</h2>
+            <h2>Info Dan Berita masjid al azhar 14 kota semarang</h2>
             <p>jl. klentengsari, pedalangan, banyumanik, semarang, jawa tengah.</p>
             <div class="dekor">
                 <span></span>
@@ -43,32 +44,37 @@
             </div>
         </div>
     </main>
-    <div class="jmt" style="display: flex; flex-direction: column; text-align: center; align-items: center; padding: 30px 0; color: white; background-color: black;">
-        <h3>Info Solat Jumat Masjid Al Azhar 14 Kota Semarang</h3>
-        <div class="jdm" style="display: flex; flex-wrap: wrap; align-items: center; text-align: center; justify-content: center;">
-            <div class="infj" style="margin: 4px; border: 1px solid white; border-radius: 4px;">
-                <p style="font-weight: 100; padding: 3px 0;">tanggal25 maret 2022</p>
-                <img src="doc solat jumat/25.png" alt="" style="width: 300px;">
+    <div class="info">
+        <h2>Info Dan berita</h2>
+        <p>info dan berita terkini di al masjid alazhar 14 kota semarang</p>
+        <div class="list-info">
+            <div class="tarawih">
+                <div class="jadwal-tarawih">
+                    <img src="solat tarawih/1.png" alt="jadwal solat tarawih tanggal 1 ramadhan">
+                    <p>1 ramadhan 1443 H / 2 april 2022</p>
+                </div>
+                <div class="jadwal-tarawih">
+                    <img src="solat tarawih/1.png" alt="jadwal solat tarawih tanggal 1 ramadhan">
+                    <p>2 ramadhan 1443 H / 3 april 2022</p>
+                </div>
+                <div class="jadwal-tarawih">
+                    <img src="solat tarawih/1.png" alt="jadwal solat tarawih tanggal 1 ramadhan">
+                    <p>3 ramadhan 1443 H / 4 april 2022</p>
+                </div>
+                <div class="jadwal-tarawih">
+                    <img src="solat tarawih/1.png" alt="jadwal solat tarawih tanggal 1 ramadhan">
+                    <p>4 ramadhan 1443 H / 5 april 2022</p>
+                </div>
+                <div class="jadwal-tarawih">
+                    <img src="solat tarawih/1.png" alt="jadwal solat tarawih tanggal 1 ramadhan">
+                    <p>5 ramadhan 1443 H / 6 april 2022</p>
+                </div>
+                <div class="jadwal-tarawih">
+                    <img src="solat tarawih/1.png" alt="jadwal solat tarawih tanggal 1 ramadhan">
+                    <p>6 ramadhan 1443 H / 7 april 2022</p>
+                </div>
             </div>
-            <div class="infj" style="margin: 4px; border: 1px solid white; border-radius: 4px;">
-                <p style="font-weight: 100; padding: 3px 0;">tanggal25 maret 2022</p>
-                <img src="doc solat jumat/1april.png" alt="" style="width: 300px;">
-            </div>
-            <div class="infj" style="margin: 4px; border: 1px solid white; border-radius: 4px;">
-                <p style="font-weight: 100; padding: 3px 0;">tanggal25 maret 2022</p>
-                <img src="doc solat jumat/1april.png" alt="" style="width: 300px;">
-            </div>
-        </div>
-        <div style="display: flex; margin-top: 20px;">
-            <div  id="jam"></div> :
-            <div style="margin-right: 5px;" id="menit"></div>
-            |<div style="margin: 0 5px;" id="tanggal"></div>
-            <div style="margin: 0 5px;" id="bulan"></div>
-            <div style="margin: 0 5px;" id="tahun"></div>
         </div>
     </div>
-
-
-    <script src="script.js"></script>
 </body>
 </html>
