--- a/jumat.html
+++ b/jumat.html
@@ -47,16 +47,16 @@
         <h3>Info Solat Jumat Masjid Al Azhar 14 Kota Semarang</h3>
         <div class="jdm" style="display: flex; flex-wrap: wrap; align-items: center; text-align: center; justify-content: center;">
             <div class="infj" style="margin: 4px; border: 1px solid white; border-radius: 4px;">
-                <p style="font-weight: 100; padding: 3px 0;">tanggal25 maret 2022</p>
+                <p style="font-weight: 100; padding: 3px 0;">tanggal 25 maret 2022</p>
                 <img src="doc solat jumat/25.png" alt="" style="width: 300px;">
             </div>
             <div class="infj" style="margin: 4px; border: 1px solid white; border-radius: 4px;">
-                <p style="font-weight: 100; padding: 3px 0;">tanggal25 maret 2022</p>
+                <p style="font-weight: 100; padding: 3px 0;">tanggal 1 april 2022</p>
                 <img src="doc solat jumat/1april.png" alt="" style="width: 300px;">
             </div>
             <div class="infj" style="margin: 4px; border: 1px solid white; border-radius: 4px;">
-                <p style="font-weight: 100; padding: 3px 0;">tanggal25 maret 2022</p>
-                <img src="doc solat jumat/1april.png" alt="" style="width: 300px;">
+                <p style="font-weight: 100; padding: 3px 0;">tanggal 8 april 2022</p>
+                <img src="doc solat jumat/8april.jpg" alt="" style="width: 300px;">
             </div>
         </div>
         <div style="display: flex; margin-top: 20px;">
